Phase 3c: broadcast fans out over virtual threads, not CompletableFuture.allOf
Distributed broadcast built a per-child continuation chain and combined
them with allOf. It now submits one virtual thread per child and joins
them, which is the same shape with no chain to read and a plain blocking
write per child.

Failure isolation is preserved: a child whose write fails is disconnected
and the broadcast continues to the rest, which is what the per-child
exceptionally() guaranteed. A child still completing its handshake is
skipped rather than awaited indefinitely.

This is the shape StructuredTaskScope exists for. It is deliberately not
used and the reason is in the code: still a preview API in Java 25, and a
library cannot force --enable-preview onto its consumers. The comment
marks the site for revisiting when it is final.

887 unit tests green, soak green across all 7 scenarios.